fixup! Add initial Devfiles which are based on Che 7 Stacks
Signed-off-by: Sergii Leshchenko <sleshche@redhat.com>

--- a/devfiles/che7-development-che-theia-and-theia-plugins.yaml
+++ b/devfiles/che7-development-che-theia-and-theia-plugins.yaml
@@ -17,7 +17,7 @@ components:
     memoryLimit: 700Mi
   -
     type: dockerimage
-    dockerimage: eclipse/che-theia-dev:next
+    image: eclipse/che-theia-dev:next
     memoryLimit: 512Mi
     endpoints:
       - name: 'ws/dev'
