--- a/devfiles/apache-camel-springboot-che7.yaml
+++ b/devfiles/apache-camel-springboot-che7.yaml
@@ -26,7 +26,7 @@ components:
   -
     type: dockerimage
     alias: maven
-    dockerimage: maven:3.6.1-jdk-8
+    image: maven:3.6.1-jdk-8
     command: ['sleep']
     args: ['infinity']
     env:
