--- a/devfiles/che7-preview-plugin-dev.yaml
+++ b/devfiles/che7-preview-plugin-dev.yaml
@@ -14,7 +14,7 @@ components:
   -
     type: dockerimage
     alias: plugin-dev
-    dockerimage: wsskeleton/che-plugin-dev-tooling
+    image: wsskeleton/che-plugin-dev-tooling
     memoryLimit: 512Mi
     mountSources: true
 commands:
