--- a/devfiles/python.yaml
+++ b/devfiles/python.yaml
@@ -17,7 +17,7 @@ components:
     memoryLimit: 512Mi
   -
     type: dockerimage
-    dockerimage: centos/python-36-centos7:1
+    image: centos/python-36-centos7:1
     command: ['sleep']
     args: ['infinity']
     env:
