fixup! fixup! Add initial Devfiles which are based on Che 7 Stacks
Signed-off-by: Sergii Leshchenko <sleshche@redhat.com>

--- a/devfiles/apache-camel-springboot-che7.yaml
+++ b/devfiles/apache-camel-springboot-che7.yaml
@@ -48,7 +48,7 @@ components:
         value: $(echo ${0})\\$
       - name: HOME
         value: /home/user
-    memoryLimit: 512mb
+    memoryLimit: 512Mi
     endpoints:
       - name: '8080/tcp'
         port: 8080
