--- a/devfiles/dotnet.yaml
+++ b/devfiles/dotnet.yaml
@@ -30,7 +30,7 @@ components:
         value: /home/user
       - name: PS1
         value: $(echo ${0})\\$
-    memoryLimit: 512mb
+    memoryLimit: 512Mi
     endpoints:
       - name: '5000/tcp'
         port: 5000
