--- a/devfiles/go.yaml
+++ b/devfiles/go.yaml
@@ -28,7 +28,7 @@ components:
         value: /tmp/.cache
       - name: PS1
         value: $(echo ${0})\\$
-    memoryLimit: 512mb
+    memoryLimit: 512Mi
     endpoints:
       - name: '8080/tcp'
         port: 8080
