--- a/devfiles/java-gradle.yaml
+++ b/devfiles/java-gradle.yaml
@@ -2,6 +2,7 @@
 displayName: Java Gradle
 description: Java Stack with OpenJDK 11 and Gradle 5.2.1
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
+specVersion: 0.0.1
 name: java-gradle
 components:
   -
