--- a/devfiles/apache-camel-springboot-che7.yaml
+++ b/devfiles/apache-camel-springboot-che7.yaml
@@ -2,6 +2,7 @@
 displayName: Apache Camel based projects on Che 7
 description: Stack with environment ready to develop Integration projects with Apache Camel based on SpringBoot.
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
+specVersion: 0.0.1
 name: apache-camel-springboot-che7
 components:
   -
