--- a/devfiles/che7-development-che-theia-and-theia-plugins.yaml
+++ b/devfiles/che7-development-che-theia-and-theia-plugins.yaml
@@ -2,12 +2,13 @@
 displayName: Che 7 Theia dev
 description: Development Theia as IDE, che-theia components, Theia plugins or plugin api.
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
+specVersion: 0.0.1
 name: che7-development-che-theia-and-theia-plugins
 components:
   -
     type: cheEditor
     id: eclipse/che-theia/next
-    memoryLimit: 512Mi
+    memoryLimit: 256Mi
   -
     type: chePlugin
     id: eclipse/che-machine-exec-plugin/0.0.1
@@ -15,6 +16,14 @@ components:
     type: chePlugin
     id: che-incubator/typescript/1.30.2
     memoryLimit: 700Mi
+  -
+    type: chePlugin
+    id: ms-vscode/node-debug/1.32.1
+    memoryLimit: 256Mi
+  -
+    type: chePlugin
+    id: ms-vscode/node-debug2/1.31.6
+    memoryLimit: 500Mi
   -
     type: dockerimage
     image: eclipse/che-theia-dev:next
