--- a/devfiles/dotnet.yaml
+++ b/devfiles/dotnet.yaml
@@ -2,6 +2,7 @@
 displayName: ".NET Core with Theia IDE"
 description: Default stack with .Net 2.2.105 and Theia IDE
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
+specVersion: 0.0.1
 name: dotnet
 components:
   -
