--- a/devfiles/java-gradle.yaml
+++ b/devfiles/java-gradle.yaml
@@ -25,7 +25,7 @@ components:
     env:
       - name: GRADLE_USER_HOME
         value: /home/user/.gradle
-      - name: JAVA_OPTS`
+      - name: JAVA_OPTS
         value: "-XX:MaxRAMPercentage=50 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
           -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
           -Dsun.zip.disableMemoryMapping=true -Xms20m -Djava.security.egd=file:/dev/./urandom"
@@ -33,7 +33,8 @@ components:
         value: "-XX:MaxRAMPercentage=50 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
           -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
           -Dsun.zip.disableMemoryMapping=true -Xms20m -Djava.security.egd=file:/dev/./urandom"
-        PS1: "$(echo ${0})\\$ "
+      - name: PS1
+        value: "$(echo ${0})\\$ "
       - name: HOME
         value: /home/user
     memoryLimit: 512Mi
