--- a/devfiles/apache-camel-springboot-che7/devfile.yaml
+++ b/devfiles/apache-camel-springboot-che7/devfile.yaml
@@ -1,10 +1,15 @@
 ---
-displayName: Java Maven
-description: Default Java Stack with OpenJDK 11 and Maven 3.6
-icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
 specVersion: 0.0.1
-name: java-maven
+name: apache-camel-springboot-che7
 components:
+  -
+    type: chePlugin
+    id: redhat/vscode-xml/0.5.1
+    memoryLimit: 128Mi
+  -
+    type: chePlugin
+    id: camel-tooling/vscode-apache-camel/0.0.14
+    memoryLimit: 128Mi
   -
     type: chePlugin
     id: redhat/java/0.38.0
@@ -12,33 +17,33 @@ components:
   -
     type: dockerimage
     alias: maven
-    image: maven:3.6.0-jdk-11
+    image: maven:3.6.1-jdk-8
     command: ['sleep']
     args: ['infinity']
     env:
       - name: MAVEN_CONFIG
-        value: /home/user/.m2
+        value: "/home/user/.m2"
       - name: MAVEN_OPTS
-        value: "-XX:MaxRAMPercentage=50 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
+        value: "-XX:MaxRAMPercentage=50.0 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
           -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
           -Dsun.zip.disableMemoryMapping=true -Xms20m -Djava.security.egd=file:/dev/./urandom"
       - name: JAVA_OPTS
-        value: "-XX:MaxRAMPercentage=50 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
+        value: "-XX:MaxRAMPercentage=50.0 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
           -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
           -Dsun.zip.disableMemoryMapping=true -Xms20m -Djava.security.egd=file:/dev/./urandom"
       - name: JAVA_TOOL_OPTIONS
-        value: "-XX:MaxRAMPercentage=50 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
+        value: "-XX:MaxRAMPercentage=50.0 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
           -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
           -Dsun.zip.disableMemoryMapping=true -Xms20m -Djava.security.egd=file:/dev/./urandom"
       - name: PS1
-        value: $(echo ${0})\\$
+        value: "$(echo ${0})\\$"
       - name: HOME
-        value: /home/user
+        value: "/home/user"
+    volumes:
+      - name: m2
+        containerPath: "/home/user/.m2"
     memoryLimit: 512Mi
     endpoints:
       - name: '8080/tcp'
         port: 8080
     mountSources: true
-    volumes:
-      - name: m2
-        containerPath: /home/user/.m2
