Add tags to meta.yaml
Signed-off-by: Sergii Leshchenko <sleshche@redhat.com>

--- a/devfiles/java-gradle/meta.yaml
+++ b/devfiles/java-gradle/meta.yaml
@@ -1,4 +1,5 @@
 ---
 displayName: Java Gradle
 description: Java Stack with OpenJDK 11 and Gradle 5.2.1
+tags: ["Java", "OpenJDK", "Gradle", "Spring Boot v2", "Debian"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
