--- a/devfiles/dotnet/meta.yaml
+++ b/devfiles/dotnet/meta.yaml
@@ -1,4 +1,5 @@
 ---
 displayName: ".NET Core with Theia IDE"
 description: Default stack with .Net 2.2.105 and Theia IDE
+tags: ["Theia", "Debian", "Dotnet", "C#"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
