--- a/devfiles/go/meta.yaml
+++ b/devfiles/go/meta.yaml
@@ -1,4 +1,5 @@
 ---
 displayName: Go with Theia IDE
 description: Default stack with Go 1.12.4 and Theia IDE
+tags: ["Theia", "Debian", "Go"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
