Change version of redhat-java plugin to latest
Signed-off-by: Valeriy Svydenko <vsvydenk@redhat.com>

--- a/devfiles/java-maven/devfile.yaml
+++ b/devfiles/java-maven/devfile.yaml
@@ -4,8 +4,7 @@ name: java-maven
 components:
   -
     type: chePlugin
-    id: redhat/java/0.38.0
-    memoryLimit: 1500Mi
+    id: redhat/java/latest
   -
     type: dockerimage
     alias: maven
