--- a/devfiles/apache-camel-springboot-che7/devfile.yaml
+++ b/devfiles/apache-camel-springboot-che7/devfile.yaml
@@ -12,8 +12,7 @@ components:
     memoryLimit: 128Mi
   -
     type: chePlugin
-    id: redhat/java/0.38.0
-    memoryLimit: 1500Mi
+    id: redhat/java/latest
   -
     type: dockerimage
     alias: maven
