--- a/devfiles/java-gradle/devfile.yaml
+++ b/devfiles/java-gradle/devfile.yaml
@@ -4,8 +4,7 @@ name: java-gradle
 components:
   -
     type: chePlugin
-    id: redhat/java/0.38.0
-    memoryLimit: 1500Mi
+    id: redhat/java/latest
   -
     type: dockerimage
     alias: gradle
