--- a/devfiles/python/meta.yaml
+++ b/devfiles/python/meta.yaml
@@ -3,3 +3,4 @@ displayName: Python with Theia IDE
 description: Default stack with Python 3.7 and Theia IDE
 tags: ["Theia", "Debian", "Python", "pip"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
+requiredMemory: 2Gi
