--- a/devfiles/java-gradle/meta.yaml
+++ b/devfiles/java-gradle/meta.yaml
@@ -3,4 +3,4 @@ displayName: Java Gradle
 description: Java Stack with OpenJDK 11 and Gradle 5.2.1
 tags: ["Java", "OpenJDK", "Gradle", "Spring Boot v2", "Debian"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
-requiredMemory: 2Gi
+globalMemoryLimit: 2674Mi
