--- a/devfiles/go/meta.yaml
+++ b/devfiles/go/meta.yaml
@@ -3,3 +3,4 @@ displayName: Go with Theia IDE
 description: Default stack with Go 1.12.4 and Theia IDE
 tags: ["Theia", "Debian", "Go"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
+globalMemoryLimit: 1686Mi
