Update the devfiles to the latest version of the devfile schema.

--- a/devfiles/apache-camel-springboot-che7/devfile.yaml
+++ b/devfiles/apache-camel-springboot-che7/devfile.yaml
@@ -1,6 +1,7 @@
 ---
-specVersion: 0.0.1
-name: apache-camel-springboot-che7
+apiVersion: 1.0.0
+metadata:
+  name: apache-camel-springboot-che7
 components:
   -
     type: chePlugin
