Update default image to quay.io/openshiftio/che-devfile-registry
Signed-off-by: Sergii Leshchenko <sleshche@redhat.com>

--- a/deploy/kubernetes/che-devfile-registry/values.yaml
+++ b/deploy/kubernetes/che-devfile-registry/values.yaml
@@ -7,7 +7,7 @@
 # SPDX-License-Identifier: EPL-2.0
 #
 
-cheDevfileRegistryImage: eclipse/che-devfile-registry
+cheDevfileRegistryImage: quay.io/openshiftio/che-devfile-registry
 cheDevfileRegistryImagePullPolicy: Always
 cheDevfileRegistryMemoryLimit: 256Mi
 #cheDevfileRegistryIngressSecretName: che-tls
