--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -2,20 +2,33 @@
 apiVersion: 1.0.0
 metadata:
   name: golang
+projects:
+  -
+    name: example
+    source: 
+      type: git
+      location: https://github.com/golang/example.git
+    clonePath: src/github.com/golang/example/
 components:
   -
     type: chePlugin
     id: ms-vscode/go/latest
+    alias: go-plugin
     memoryLimit: 512Mi
   -
     type: dockerimage
-    image: golang:1.12.4-stretch
+    # this version is used in the plugin
+    image: golang:1.10.7-stretch
+    alias: go-cli
     command: ['sleep']
     args: ['infinity']
     env:
       - name: GOPATH
-        value: /go:/projects
+        # replicate the GOPATH from the plugin
+        value: /go:$(CHE_PROJECTS_ROOT)
       - name: GOCACHE
+        # replicate the GOCACHE from the plugin, even though the cache is not shared
+        # between the two
         value: /tmp/.cache
       - name: PS1
         value: $(echo ${0})\\$
