Update gradle mounted volume path to match dockerfile
The community gradle dockerfile expects a volume at

/home/gradle/.gradle

If this volume is not included explicitly, the devfile can fail to start
on kubernetes clusters, since docker will by default attempt to
provision host storage for VOLUMEs. Many Kubernetes clusters forbid
this for security reasons.

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/devfiles/java-gradle/devfile.yaml
+++ b/devfiles/java-gradle/devfile.yaml
@@ -20,7 +20,7 @@ components:
     args: ['infinity']
     env:
       - name: GRADLE_USER_HOME
-        value: /home/user/.gradle
+        value: /home/gradle/.gradle
       - name: JAVA_OPTS
         value: "-XX:MaxRAMPercentage=50 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
           -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
@@ -32,14 +32,14 @@ components:
       - name: PS1
         value: "$(echo ${0})\\$ "
       - name: HOME
-        value: /home/user
+        value: /home/gradle
     memoryLimit: 512Mi
     endpoints:
       - name: '8080/tcp'
         port: 8080
     volumes:
       - name: gradle
-        containerPath: /home/user/.gradle
+        containerPath: /home/gradle/.gradle
     mountSources: true
 commands:
   -
