--- a/devfiles/php-symfony/devfile.yaml
+++ b/devfiles/php-symfony/devfile.yaml
@@ -12,14 +12,14 @@ components:
 -
   type: chePlugin
   id: redhat/php/latest
-  memoryLimit: 1000Mi
+  memoryLimit: 1Gi
 -
   type: chePlugin
   id: redhat/php-debugger/latest
   memoryLimit: 256Mi
 -
   type: dockerimage
-  alias: tools
+  alias: php
   image: eclipse/php:7.1-che7
   env:
     - name: HOME
@@ -60,21 +60,21 @@ commands:
 -
   name: Start Symfony Web Server
   actions:
-  - type: custom
-    component: tools
+  - type: exec
+    component: php
     command: "$HOME/.symfony/bin/symfony server:start"
     workdir: ${CHE_PROJECTS_ROOT}/symfony-demo-application
 -
   name: Install dependencies
   actions:
-  - type: custom
-    component: tools
+  - type: exec
+    component: php
     command: "composer install && wget https://get.symfony.com/cli/installer -O - | bash"
     workdir: ${CHE_PROJECTS_ROOT}/symfony-demo-application
 -
   name: Stop Symfony Web Server
   actions:
-  - type: custom
-    component: tools
+  - type: exec
+    component: php
     command: "$HOME/.symfony/bin/symfony server:stop"
     workdir: ${CHE_PROJECTS_ROOT}/symfony-demo-application
