--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -3,34 +3,42 @@ apiVersion: 1.0.0
 metadata:
   name: golang
 projects:
-  -
-    name: example
-    source: 
-      type: git
-      location: https://github.com/golang/example.git
-    clonePath: src/github.com/golang/example/
+-
+  name: example
+  source: 
+    type: git
+    location: https://github.com/golang/example.git
+  clonePath: src/github.com/golang/example/
 components:
-  -
-    type: chePlugin
-    id: ms-vscode/go/latest
-    alias: go-plugin
-    memoryLimit: 512Mi
-  -
-    type: dockerimage
-    # this version is used in the plugin
-    image: golang:1.10.7-stretch
-    alias: go-cli
-    command: ['sleep']
-    args: ['infinity']
-    env:
-      - name: GOPATH
-        # replicate the GOPATH from the plugin
-        value: /go:$(CHE_PROJECTS_ROOT)
-      - name: GOCACHE
-        # replicate the GOCACHE from the plugin, even though the cache is not shared
-        # between the two
-        value: /tmp/.cache
-      - name: PS1
-        value: $(echo ${0})\\$
-    memoryLimit: 512Mi
-    mountSources: true
+-
+  type: chePlugin
+  id: ms-vscode/go/latest
+  alias: go-plugin
+  memoryLimit: 512Mi
+-
+  type: dockerimage
+  # this version is used in the plugin
+  image: golang:1.10.7-stretch
+  alias: go-cli
+  command: ['sleep']
+  args: ['infinity']
+  env:
+    - name: GOPATH
+      # replicate the GOPATH from the plugin
+      value: /go:$(CHE_PROJECTS_ROOT)
+    - name: GOCACHE
+      # replicate the GOCACHE from the plugin, even though the cache is not shared
+      # between the two
+      value: /tmp/.cache
+    - name: PS1
+      value: $(echo ${0})\\$
+  memoryLimit: 512Mi
+  mountSources: true
+commands:
+-
+  name: run outyet
+  actions:
+  - type: exec
+    component: go-cli
+    command: go get -d && go run main.go
+    workdir: ${CHE_PROJECTS_ROOT}/src/github.com/golang/example/outyet
