--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -42,3 +42,9 @@ commands:
     component: go-cli
     command: go get -d && go run main.go
     workdir: ${CHE_PROJECTS_ROOT}/src/github.com/golang/example/outyet
+- name: test outyet
+  actions:
+  - type: exec
+    component: go-cli
+    command: go test
+    workdir: ${CHE_PROJECTS_ROOT}/src/github.com/golang/example/outyet
