--- a/devfiles/apache-camel-springboot/devfile.yaml
+++ b/devfiles/apache-camel-springboot/devfile.yaml
@@ -20,6 +20,9 @@ components:
     type: chePlugin
     id: redhat/java/latest
   -
+    type: chePlugin
+    id: ms-vscode/vscode-git/latest
+  -
     type: dockerimage
     alias: maven
     image: maven:3.6.1-jdk-8
