--- a/devfiles/java-gradle/devfile.yaml
+++ b/devfiles/java-gradle/devfile.yaml
@@ -13,6 +13,9 @@ components:
     type: chePlugin
     id: redhat/java/latest
   -
+    type: chePlugin
+    id: ms-vscode/vscode-git/latest
+  -
     type: dockerimage
     alias: gradle
     image: gradle:5.2.1-jdk11
