Vert.x example now works.

--- a/devfiles/java-web-vertx/devfile.yaml
+++ b/devfiles/java-web-vertx/devfile.yaml
@@ -61,5 +61,5 @@ commands:
       -
         type: exec
         component: maven
-        command: "java -jar ./target/*fat.jar"
+        command: "JDBC_URL=jdbc:h2:/tmp/db java -jar ./target/*fat.jar"
         workdir: "${CHE_PROJECTS_ROOT}/java-web-vertx"
