meta files cleanup
Signed-off-by: Michal Vala <mvala@redhat.com>

--- a/devfiles/angular/meta.yaml
+++ b/devfiles/angular/meta.yaml
@@ -1,6 +1,6 @@
 ---
 displayName: NodeJS Angular Web Application
-description: Devfile for developing NodeJS Angular Web Application
-tags: ["NodeJS", "Theia", "Angular"]
+description: Stack for developing NodeJS Angular Web Application
+tags: ["NodeJS", "Angular", "Alpine"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
 globalMemoryLimit: 2686Mi
