--- a/devfiles/php-laravel/meta.yaml
+++ b/devfiles/php-laravel/meta.yaml
@@ -1,6 +1,6 @@
 ---
-displayName: "PHP Laravel"
-description: PHP Stack with Laravel real world application
-tags: ["PHP", "Apache", "MySQL"]
+displayName: "PHP Laravel with MySQL"
+description: PHP Stack with Laravel and MySQL real world application
+tags: ["PHP", "Apache", "MySQL", "Centos", "Debian"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
 globalMemoryLimit: 2686Mi
