--- a/devfiles/apache-camel-springboot/meta.yaml
+++ b/devfiles/apache-camel-springboot/meta.yaml
@@ -1,6 +1,6 @@
 ---
-displayName: Apache Camel based projects on Che 7
-description: Stack with environment ready to develop Integration projects with Apache Camel based on SpringBoot.
-tags: ["Java", "OpenJDK", "Maven", "Debian", "Apache Camel", "Red Hat Fuse"]
+displayName: Apache Camel based on Spring Boot
+description: Stack with environment ready to develop Integration projects with Apache Camel based on Spring Boot.
+tags: ["Java", "OpenJDK", "Maven", "Debian", "Apache Camel", "Red Hat Fuse", "Spring Boot"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
 globalMemoryLimit: 2930Mi
