--- a/devfiles/php-mysql/meta.yaml
+++ b/devfiles/php-mysql/meta.yaml
@@ -1,6 +1,6 @@
 ---
-displayName: "PHP MySQL"
+displayName: "PHP with MySQL"
 description: PHP Stack with MySQL and simple database application
-tags: ["PHP", "Apache", "MySQL"]
+tags: ["PHP", "Apache", "MySQL", "Debian", "Centos"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
 globalMemoryLimit: 2686Mi
