rename "Default stack" to just "Stack"
Signed-off-by: Michal Vala <mvala@redhat.com>

--- a/devfiles/dotnet/meta.yaml
+++ b/devfiles/dotnet/meta.yaml
@@ -1,6 +1,6 @@
 ---
 displayName: ".NET Core"
-description: Default stack with .Net 2.2
+description: Stack with .Net 2.2
 tags: ["Debian", "Dotnet", "C#"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
 globalMemoryLimit: 2710Mi
