Update the java-mysql sample to use the spring-petclinic project and clean up the devfile a bit.
Signed-off-by: Lukas Krejci <lkrejci@redhat.com>

--- a/devfiles/java-mysql/devfile.yaml
+++ b/devfiles/java-mysql/devfile.yaml
@@ -7,8 +7,7 @@ projects:
     name: web-java-spring-petclinic
     source:
       type: git
-      location: "https://github.com/che-samples/web-java-spring-petclinic.git"
-      branch: mysql
+      location: "https://github.com/spring-projects/spring-petclinic.git"
 components:
   -
     type: chePlugin
@@ -20,25 +19,15 @@ components:
     command: ['sleep']
     args: ['infinity']
     env:
-      - name: MAVEN_CONFIG
-        value: /home/user/.m2
-      - name: MAVEN_OPTS
+      - name: JAVA_OPTS
         value: "-XX:MaxRAMPercentage=50.0 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
           -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
           -Dsun.zip.disableMemoryMapping=true -Xms20m -Djava.security.egd=file:/dev/./urandom
           -Duser.home=/home/user"
-      - name: JAVA_OPTS
-        value: "-XX:MaxRAMPercentage=50.0 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
-          -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
-          -Dsun.zip.disableMemoryMapping=true -Xms20m -Djava.security.egd=file:/dev/./urandom"
-      - name: JAVA_TOOL_OPTIONS
-        value: "-XX:MaxRAMPercentage=50.0 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
-          -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
-          -Dsun.zip.disableMemoryMapping=true -Xms20m -Djava.security.egd=file:/dev/./urandom"
+      - name: MAVEN_OPTS
+        value: $(JAVA_OPTS)
       - name: PS1
         value: $(echo ${0})\\$
-      - name: HOME
-        value: /home/user
     memoryLimit: 512Mi
     endpoints:
       - name: '8080/tcp'
@@ -60,14 +49,13 @@ components:
         value: petclinic
       - name: PS1
         value: $(echo ${0})\\$
-      - name: HOME
-        value: /home/user
     memoryLimit: 256Mi
     endpoints:
       - name: 'db'
         port: 3306
         attributes:
           discoverable: "true"
+          public: "false"
     mountSources: false
 commands:
   -
@@ -76,37 +64,13 @@ commands:
       -
         type: exec
         component: tools
-        command: "mvn -Duser.home=${HOME} clean install"
+        command: "./mvnw clean install"
         workdir: "${CHE_PROJECTS_ROOT}/web-java-spring-petclinic"
-  -
-    name: deploy
+  - name: run webapp
     actions:
       -
         type: exec
         component: tools
-        command: "cp target/*.war ${TOMCAT_HOME}/webapps/ROOT.war"
-        workdir: "${CHE_PROJECTS_ROOT}/web-java-spring-petclinic"
-  -
-    name: start tomcat
-    actions:
-      -
-        type: exec
-        component: tools
-        command: "${TOMCAT_HOME}/bin/catalina.sh run 2>&1"
-        workdir: "${TOMCAT_HOME}"
-  -
-    name: stop tomcat
-    actions:
-      -
-        type: exec
-        component: tools
-        command: "./bin/catalina.sh stop"
-        workdir: "${TOMCAT_HOME}"
-  -
-    name: maven build and deploy
-    actions:
-      -
-        type: exec
-        component: tools
-        command: "mvn -Duser.home=${HOME} clean install && cp target/*.war ${TOMCAT_HOME}/webapps/ROOT.war"
-        workdir: "${CHE_PROJECTS_ROOT}/web-java-spring-petclinic"
+        command: |
+          SPRING_DATASOURCE_URL=jdbc:mysql://db/petclinic SPRING_DATASOURCE_USERNAME=petclinic SPRING_DATASOURCE_PASSWORD=password java -jar target/*.jar --spring.profile.active=mysql
+        workdir: ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic
