--- a/devfiles/nodejs/meta.yaml
+++ b/devfiles/nodejs/meta.yaml
@@ -1,6 +1,6 @@
 ---
 displayName: NodeJS Express Web Application
-description: Default stack with NodeJS 10
-tags: ["NodeJS", "Express", "Theia", "ubi8"]
+description: Stack with NodeJS 10
+tags: ["NodeJS", "Express", "ubi8"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
 globalMemoryLimit: 1686Mi
