--- a/devfiles/nodejs-react/meta.yaml
+++ b/devfiles/nodejs-react/meta.yaml
@@ -1,6 +1,6 @@
 ---
-displayName: React web application
-description: NodeJS 10 stack with React real world application
+displayName: NodeJS React Web Application
+description: Stack for developing NodeJS React Web Application
 tags: ["NodeJS", "React", "Redux", "RealWorld"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
 globalMemoryLimit: 1686Mi
