Fix typo in python-django stack
Signed-off-by: Anatoliy Bazko <abazko@redhat.com>

--- a/devfiles/python-django/devfile.yaml
+++ b/devfiles/python-django/devfile.yaml
@@ -45,7 +45,7 @@ commands:
         type: exec
         component: python
         command: python manage.py migrate
-        workdir: cd ${CHE_PROJECTS_ROOT}/django-realworld-example-app
+        workdir: ${CHE_PROJECTS_ROOT}/django-realworld-example-app
   -
     name: patch resources
     actions:
