--- a/devfiles/java-web-spring/meta.yaml
+++ b/devfiles/java-web-spring/meta.yaml
@@ -1,6 +1,6 @@
 ---
-displayName: Java Web Spring
-description: Default Java Spring Stack
-tags: ["Java", "Maven", "Spring Boot v2"]
+displayName: Java Spring Boot
+description: Java stack with OpenJDK 8 and Spring Boot Petclinic demo application
+tags: ["Java", "OpenJDK", "Maven", "Spring Boot"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
 globalMemoryLimit: 2674Mi
