Patch all used images for arbitrary users on OpenShift
- Patch all currently used images for arbitrary user support
- Move $HOME and $PS1 definition into arbitrary user patch to simplify
  devfiles and make UX more consistent
- Add additional fixes to patched images:
  - Set chmod g=u on /home to allow write access
  - Create home directory if it does not exist

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/arbitrary-users-patch/Dockerfile
+++ b/arbitrary-users-patch/Dockerfile
@@ -1,12 +1,13 @@
 ARG FROM_IMAGE
 FROM ${FROM_IMAGE}
 USER 0
-RUN chmod g=u /etc/passwd
+# Set permissions on /etc/passwd and /home to allow arbitrary users to write
+RUN chmod g=u /etc/passwd /home
 COPY [--chown=0:0] entrypoint.sh /
-RUN chmod +x entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
 USER 10001
-ENV HOME /home/user
+ENV HOME=/home/user
 WORKDIR /projects
 ENTRYPOINT [ "/entrypoint.sh" ]
-CMD ["sleep", "infinity"]
+CMD ["tail", "-f", "/dev/null"]
