--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -18,7 +18,7 @@ components:
 -
   type: dockerimage
   # this version is used in the plugin
-  image: quay.io/eclipse/che7-golang-1.10:nightly
+  image: quay.io/eclipse/che-golang-1.10:nightly
   alias: go-cli
   env:
     - name: GOPATH
