--- a/devfiles/php-web-simple/devfile.yaml
+++ b/devfiles/php-web-simple/devfile.yaml
@@ -20,7 +20,7 @@ components:
 -
   type: dockerimage
   alias: php
-  image: quay.io/eclipse/che7-php-7:nightly
+  image: quay.io/eclipse/che-php-7:nightly
   memoryLimit: 512Mi
   mountSources: true
   volumes:
