--- a/devfiles/python/devfile.yaml
+++ b/devfiles/python/devfile.yaml
@@ -16,7 +16,7 @@ components:
   -
     type: dockerimage
     alias: python
-    image: quay.io/eclipse/che7-python-3.6:nightly
+    image: quay.io/eclipse/che-python-3.6:nightly
     memoryLimit: 512Mi
     mountSources: true
 commands:
