Fix some references to quay.io/openshiftio
Signed-off-by: Mario Loriedo <mario.loriedo@gmail.com>

--- a/deploy/kubernetes/che-devfile-registry/values.yaml
+++ b/deploy/kubernetes/che-devfile-registry/values.yaml
@@ -7,7 +7,7 @@
 # SPDX-License-Identifier: EPL-2.0
 #
 
-cheDevfileRegistryImage: quay.io/openshiftio/che-devfile-registry
+cheDevfileRegistryImage: quay.io/eclipse/che-devfile-registry:nightly
 cheDevfileRegistryImagePullPolicy: Always
 cheDevfileRegistryMemoryLimit: 256Mi
 #cheDevfileRegistryIngressSecretName: che-tls
