--- a/deploy/openshift/che-devfile-registry.yaml
+++ b/deploy/openshift/che-devfile-registry.yaml
@@ -83,13 +83,13 @@ objects:
       name: che-devfile-registry
 parameters:
 - name: IMAGE
-  value: quay.io/openshiftio/che-devfile-registry
+  value: quay.io/eclipse/che-devfile-registry
   displayName: Eclipse Che devfile registry image
-  description: Che devfile registry Docker image. Defaults to quay.io/openshiftio/che-devfile-registry
+  description: Che devfile registry Docker image. Defaults to quay.io/eclipse/che-devfile-registry
 - name: IMAGE_TAG
-  value: latest
+  value: nightly
   displayName: Eclipse Che devfile registry version
-  description: Eclipse Che devfile registry version which defaults to latest
+  description: Eclipse Che devfile registry version which defaults to nightly
 - name: MEMORY_LIMIT
   value: 256Mi
   displayName: Memory Limit
