Patch all used images for arbitrary users on OpenShift (#38)
* Patch all used images for arbitrary users on OpenShift

- Patch all currently used images for arbitrary user support
- Move $HOME and $PS1 definition into arbitrary user patch to simplify
  devfiles and make UX more consistent
- Add additional fixes to patched images:
  - Set chmod g=u on /home to allow write access
  - Create home directory if it does not exist

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/devfiles/apache-camel-springboot/devfile.yaml
+++ b/devfiles/apache-camel-springboot/devfile.yaml
@@ -22,9 +22,7 @@ components:
   -
     type: dockerimage
     alias: maven
-    image: maven:3.6.1-jdk-8
-    command: ['sleep']
-    args: ['infinity']
+    image: quay.io/eclipse/che-java8-maven:nightly
     env:
       - name: MAVEN_CONFIG
         value: "/home/user/.m2"
@@ -40,10 +38,6 @@ components:
         value: "-XX:MaxRAMPercentage=50.0 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
           -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
           -Dsun.zip.disableMemoryMapping=true -Xms20m -Djava.security.egd=file:/dev/./urandom"
-      - name: PS1
-        value: "$(echo ${0})\\$"
-      - name: HOME
-        value: "/home/user"
     volumes:
       - name: m2
         containerPath: "/home/user/.m2"
