--- a/devfiles/java-gradle/devfile.yaml
+++ b/devfiles/java-gradle/devfile.yaml
@@ -15,9 +15,7 @@ components:
   -
     type: dockerimage
     alias: gradle
-    image: gradle:5.2.1-jdk11
-    command: ['sleep']
-    args: ['infinity']
+    image: quay.io/eclipse/che-java11-gradle:nightly
     env:
       - name: GRADLE_USER_HOME
         value: /home/gradle/.gradle
@@ -29,8 +27,6 @@ components:
         value: "-XX:MaxRAMPercentage=50 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
           -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
           -Dsun.zip.disableMemoryMapping=true -Xms20m -Djava.security.egd=file:/dev/./urandom"
-      - name: PS1
-        value: "$(echo ${0})\\$ "
       - name: HOME
         value: /home/gradle
     memoryLimit: 512Mi
