--- a/devfiles/python-django/devfile.yaml
+++ b/devfiles/python-django/devfile.yaml
@@ -16,14 +16,7 @@ components:
   -
     type: dockerimage
     alias: python
-    image: centos/python-36-centos7:1
-    command: ['sleep']
-    args: ['infinity']
-    env:
-      - name: HOME
-        value: /home/user
-      - name: PS1
-        value: $(echo ${0})\\$
+    image: quay.io/eclipse/che-python-3.6:nightly
     memoryLimit: 512Mi
     endpoints:
       - name: 'django'
