--- a/devfiles/nodejs-react/devfile.yaml
+++ b/devfiles/nodejs-react/devfile.yaml
@@ -18,14 +18,7 @@ components:
     alias: nodejs
     # system limit for number of file watchers reached with
     # image: registry.access.redhat.com/ubi8/nodejs-10
-    image: registry.centos.org/che-stacks/centos-nodejs
-    command: ['sleep']
-    args: ['infinity']
-    env:
-      - name: HOME
-        value: /tmp/user
-      - name: PS1
-        value: $(echo ${0})\\$
+    image: quay.io/eclipse/che-nodejs8-centos:nightly
     memoryLimit: 512Mi
     endpoints:
       - name: 'nodejs'
