--- a/devfiles/php-mysql/devfile.yaml
+++ b/devfiles/php-mysql/devfile.yaml
@@ -20,12 +20,7 @@ components:
 -
   type: dockerimage
   alias: php
-  image: eclipse/php:7.1-che7
-  env:
-    - name: HOME
-      value: /home/user
-    - name: PS1
-      value: $(echo ${0})\\$
+  image: quay.io/eclipse/che-php-7:nightly
   memoryLimit: 512Mi
   endpoints:
   - name: '8080/tcp'
